Some more spacing fixes

--- a/app/assets/stylesheets/components/_links.scss
+++ b/app/assets/stylesheets/components/_links.scss
@@ -15,3 +15,10 @@ a{
 
   }
 }
+
+.set-actions{
+  .nav-pills{
+    margin: 0px;
+    float: right;
+  }
+}
